Added /breed and new breeding system
- Updated breeding rules to more closely match the games (abilities, egg moves)
- Added Nursery to handle breeding, players can breed up to 3 pairs at a time (determined by PML)
- Added search option for /pokemon, called `is:canbreed`
- Updated breeding checks and PokemonEgg child species determination